src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__vega20__tests__bc250_default_commands.snap
---
source: src/gpu_handle/overdrive/vega20.rs
expression: "table.get_commands(&ClocksTableGen::Vega20(table.clone())).unwrap()"
---
- vc 0 1500 837
