src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__vega20__tests__parse_6700xt_full.snap
---
source: src/gpu_handle/overdrive/vega20.rs
expression: table
---
current_sclk_range:
  min: 500
  max: 2725
sclk_offset: ~
rdna4_sclk_offset_workaround: false
current_mclk_range:
  min: 97
  max: 1000
vddc_curve: []
voltage_offset: 0
od_range:
  sclk:
    min: 500
    max: 2800
  sclk_offset: ~
  mclk:
    min: 674
    max: 1075
  curve_sclk_points: []
  curve_voltage_points: []
  voltage_offset: ~
