src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__vega20__tests__parse_7800xt_full.snap
---
source: src/gpu_handle/overdrive/vega20.rs
expression: table
---
current_sclk_range:
  min: 500
  max: 2660
current_mclk_range:
  min: 97
  max: 1219
vddc_curve: []
pure_vddc: ~
voltage_offset: 0
od_range:
  sclk:
    min: 500
    max: 5000
  mclk:
    min: 97
    max: 1500
  vddc: ~
  curve_sclk_points: []
  curve_voltage_points: []
  voltage_offset:
    min: -450
    max: 0
