src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__vega20__tests__parse_7900xtx_full.snap
---
source: src/gpu_handle/overdrive/vega20.rs
expression: table
---
current_sclk_range:
  min: 500
  max: 3005
current_mclk_range:
  min: 97
  max: 1250
vddc_curve: []
voltage_offset: ~
od_range:
  sclk:
    min: 500
    max: 5000
  mclk:
    min: 97
    max: 1500
  curve_sclk_points: []
  curve_voltage_points:
    - min: -450
      max: 0

