src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__vega20__tests__parse_9070xt_full.snap
---
source: src/gpu_handle/overdrive/vega20.rs
expression: table
---
current_sclk_range:
  min: ~
  max: ~
current_sclk_offset_range:
  min: -500
  max: 1000
current_mclk_range:
  min: 97
  max: 1259
vddc_curve: []
voltage_offset: 0
od_range:
  sclk: ~
  sclk_offset:
    min: -500
    max: 1000
  mclk:
    min: 97
    max: 1500
  curve_sclk_points: []
  curve_voltage_points: []
  voltage_offset:
    min: -200
    max: 0
