src/gpu_handle/overdrive/snapshots/amdgpu_sysfs__gpu_handle__overdrive__vega20__tests__parse_vangogh_full.snap
---
source: src/gpu_handle/overdrive/vega20.rs
expression: table
---
current_sclk_range:
  min: 1600
  max: 1600
current_mclk_range:
  min: ~
  max: ~
vddc_curve: []
pure_vddc: ~
voltage_offset: ~
od_range:
  sclk:
    min: 200
    max: 1600
  mclk: ~
  vddc: ~
  curve_sclk_points: []
  curve_voltage_points: []
  voltage_offset: ~
